1998-04-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Raster): Add ellipseX0:Y0:X1:Y1:Width:Color,
	lineX0:Y0:X1:Y1:Width:Color:, and rectangleX0:Y0:X1:Y1:Width:Color:.

1998-04-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h: Colormap and Pixmap protocols now are drived from Create
	protocol.  (Thanks to Ken Cline.)
	Add "@class Raster".  (Thanks to Pietro Terna.)
	(Pixmap): Add getWidth and getHeight methods to protocol.

1998-04-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h: Create class object for Raster.
	(Drawer): Use it to declare drawX:Y: method spec.
	(Raster): Declare draw:X:Y: method spec.
	(Pixmap): New protocol.
	Create class object for Pixmap.

1998-02-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Entry): Add linkVariableInt: to protocol (used in testIPD).
	(Graph) Add setRangesYMin:Max:.
	(GraphElement): Add setColor:, setDashes:, setSymbol:, and resetData.
	(Entry): Add linkVariableDouble: and linkVariableBoolean:.

1998-02-24  Alex Lancaster  <alex@santafe.edu>

	* gui.h (GUI_UPDATE_IDLE_TASKS): Added to call the new
	parametrized (tkobjc_updateIdleTasks) for the Tk #ifndef and a
	stub added for the Java version.

1998-02-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h: Change javaobjc to awtobjc throughout.  Use initAWTObjc
	instead of initJavaObjc.

1998-02-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h: Add AWT placeholders for GUI_* macros.
	Change GUI_INIT to take a single argument, the Arguments object.
	Switch from #ifdef _TK_ to #ifndef USE_JAVA.
	(Widget): Add setPositionX:Y:.

1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h: Remove GUI_ prefixes from GUI_Color and GUI_PixelValue.
	Notes about XPixmap and XDrawer.  Remove GUI_ButtonRight.  Add
	ButtonLeft, ButtonMiddle, and ButtonRight defines.  Use #import
	for tkobjc/common.h and tkobjc/global.h.  Rename class XColormap
	to Colormap and BLTGraph to Graph.  Add @class Entry.  Add